--- a/platformio.ini
+++ b/platformio.ini
@@ -2,10 +2,11 @@
 lib_dir = .
 ; src_dir = examples/Read
 ; src_dir = examples/ReadAsync
-src_dir = examples/ReadAsyncMulti
+; src_dir = examples/ReadAsyncMulti
 ; src_dir = examples/EnergyReset
 ; src_dir = examples/EnergyResetAsync
 ; src_dir = examples/SetAddress
+src_dir = examples/SetAddressMulti
 ; src_dir = examples/Search
 default_envs = esp32
 ; default_envs = esp32s3box
