--- a/platformio.ini
+++ b/platformio.ini
@@ -5,8 +5,8 @@ lib_dir = .
 ; src_dir = examples/ReadAsyncMulti
 ; src_dir = examples/EnergyReset
 ; src_dir = examples/EnergyResetAsync
-; src_dir = examples/SetAddress
-src_dir = examples/SetAddressMulti
+src_dir = examples/SetAddress
+; src_dir = examples/SetAddressMulti
 ; src_dir = examples/Search
 default_envs = esp32
 ; default_envs = esp32s3box
