--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,8 +101,10 @@ jobs:
         include:
           - platform: espressif32
             board: esp32dev
-            eeprom: true
-            softwareserial: false
+            opts:
+          - platform: espressif32
+            board: esp32dev
+            opts: "--project-option 'platform_packages=platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-alpha3, platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1'"
 
     steps:
       - name: Checkout
@@ -128,22 +130,22 @@ jobs:
         run: platformio platform install ${{ matrix.platform }}
 
       - name: Build Read
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/Read/Read.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/Read/Read.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build ReadAsync
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/ReadAsync/ReadAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/ReadAsync/ReadAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build ReadAsyncMulti
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/ReadAsyncMulti/ReadAsyncMulti.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/ReadAsyncMulti/ReadAsyncMulti.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build EnergyReset
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/EnergyReset/EnergyReset.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/EnergyReset/EnergyReset.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build EnergyResetAsync
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/EnergyResetAsync/EnergyResetAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/EnergyResetAsync/EnergyResetAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build SetAddress
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra" platformio ci "examples/SetAddress/SetAddress.ino" -l '.' -b ${{ matrix.board }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra" platformio ci "examples/SetAddress/SetAddress.ino" -l '.' -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build Search
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra" platformio ci "examples/Search/Search.ino" -l '.' -b ${{ matrix.board }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra" platformio ci "examples/Search/Search.ino" -l '.' -b ${{ matrix.board }} ${{ matrix.opts }}
