--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,11 @@ default_envs = esp32
 ; default_envs = esp32s3box
 
 [env]
+; platform = espressif32@6.5.0
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-alpha3
+  platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 
 build_flags = 
   -Wall -Wextra
@@ -35,12 +40,10 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
 
 [env:esp32]
-platform = espressif32@6.5.0
 board = esp32dev
 framework = arduino
 
 [env:esp32s3box]
-platform = espressif32@6.5.0
 board = esp32s3box
 framework = arduino
 upload_speed = 115200
