--- a/platformio.ini
+++ b/platformio.ini
@@ -1,21 +1,21 @@
 [platformio]
 lib_dir = .
 ; src_dir = examples/Read
-; src_dir = examples/ReadAsync
+src_dir = examples/ReadAsync
 ; src_dir = examples/ReadAsyncMulti
 ; src_dir = examples/EnergyReset
 ; src_dir = examples/EnergyResetAsync
-src_dir = examples/SetAddress
+; src_dir = examples/SetAddress
 ; src_dir = examples/Search
 default_envs = esp32
 ; default_envs = esp32s3box
 
 [env]
-; platform = espressif32@6.6.0
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-alpha3
-  platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+platform = espressif32@6.6.0
+; platform = espressif32
+; platform_packages=
+;   platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-alpha3
+;   platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 
 build_flags = 
   -Wall -Wextra
