Breaking change: swapped rx/tx (see #3)

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 lib_dir = .
 ; src_dir = examples/Read
-src_dir = examples/ReadAsync
-; src_dir = examples/ReadAsyncMulti
+; src_dir = examples/ReadAsync
+src_dir = examples/ReadAsyncMulti
 ; src_dir = examples/EnergyReset
 ; src_dir = examples/EnergyResetAsync
 ; src_dir = examples/SetAddress
