--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,19 @@
+[env]
+framework = arduino
+board = esp32dev
+; board = esp32s3box
+build_flags = 
+  -Wall -Wextra
+  -D CONFIG_ARDUHAL_LOG_COLORS
+  -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+  -D MYCILA_PZEM_JSON_SUPPORT
+  -UARDUINO_USB_CDC_ON_BOOT
+lib_deps = 
+  bblanchon/ArduinoJson @ 7.0.4
+upload_protocol = esptool
+monitor_speed = 115200
+monitor_filters = esp32_exception_decoder, log2file
+
 [platformio]
 lib_dir = .
 ; src_dir = examples/Read
@@ -7,42 +23,21 @@ src_dir = examples/ReadAsyncMulti
 ; src_dir = examples/EnergyResetAsync
 ; src_dir = examples/SetAddress
 ; src_dir = examples/Search
-; default_envs = esp32
-; default_envs = esp32s3box
 
-[env]
+[env:v660]
+platform = espressif32@6.6.0
+
+[env:latest-espressif32]
+platform = https://github.com/platformio/platform-espressif32.git
+
+[env:latest-arduino]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+
+[env:v300-rc1]
 platform = espressif32
 platform_packages=
   platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-
-build_flags = 
-  -Wall -Wextra
-  -Wunused -Wmisleading-indentation -Wduplicated-cond -Wlogical-op -Wnull-dereference  
-  -std=c++17
-  -std=gnu++17
-  -O0
-  -ggdb -ggdb3 -g3
-  -D CONFIG_ARDUHAL_LOG_COLORS
-  -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-  -D MYCILA_PZEM_JSON_SUPPORT
-  -UARDUINO_USB_CDC_ON_BOOT
-build_unflags =
-    -std=gnu++11
-
-lib_deps = bblanchon/ArduinoJson
-lib_compat_mode = strict
-lib_ldf_mode = deep+
-
-upload_protocol = esptool
-monitor_speed = 115200
-monitor_filters = esp32_exception_decoder, log2file
-
-[env:esp32]
-board = esp32dev
-framework = arduino
-
-[env:esp32s3box]
-board = esp32s3box
-framework = arduino
-upload_speed = 115200
