--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@ build_flags =
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
   -D MYCILA_PZEM_JSON_SUPPORT
+  -D MYCILA_PZEM_ASYNC_STACK_SIZE=4096
   -UARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
   bblanchon/ArduinoJson @ 7.0.4
@@ -18,11 +19,15 @@ monitor_filters = esp32_exception_decoder, log2file
 lib_dir = .
 ; src_dir = examples/Read
 ; src_dir = examples/ReadAsync
-src_dir = examples/ReadAsyncMulti
+; src_dir = examples/ReadAsyncMulti
 ; src_dir = examples/EnergyReset
 ; src_dir = examples/EnergyResetAsync
 ; src_dir = examples/SetAddress
 ; src_dir = examples/Search
+; src_dir = examples/PerfTest1
+src_dir = examples/PerfTest2
+; src_dir = examples/Callback
+; src_dir = examples/CallbackAsync
 
 [env:v660]
 platform = espressif32@6.6.0
