--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,18 @@ jobs:
       - name: Build Search
         run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/Search/Search.ino"
 
+      - name: Build PerfTest1
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/PerfTest1/PerfTest1.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+
+      - name: Build PerfTest2
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/PerfTest2/PerfTest2.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+
+      - name: Build Callback
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/Callback/Callback.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+
+      - name: Build CallbackAsync
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/CallbackAsync/CallbackAsync.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+
   platformio:
     name: pio ${{ matrix.name }}
     needs: cpplint
@@ -186,3 +198,15 @@ jobs:
 
       - name: Build Search
         run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra" platformio ci "examples/Search/Search.ino" -l '.' -b ${{ matrix.board }} ${{ matrix.opts }}
+
+      - name: Build PerfTest1
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/PerfTest1/PerfTest1.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+
+      - name: Build PerfTest2
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/PerfTest2/PerfTest2.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+
+      - name: Build Callback
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/Callback/Callback.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+
+      - name: Build CallbackAsync
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/CallbackAsync/CallbackAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
