--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,19 +72,19 @@ jobs:
         run: arduino-cli lib install ArduinoJson
 
       - name: Build Read
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/Read/Read.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/Read/Read.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build ReadAsync
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/ReadAsync/ReadAsync.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/ReadAsync/ReadAsync.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build ReadAsyncMulti
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/ReadAsyncMulti/ReadAsyncMulti.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/ReadAsyncMulti/ReadAsyncMulti.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build EnergyReset
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/EnergyReset/EnergyReset.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/EnergyReset/EnergyReset.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build EnergyResetAsync
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/EnergyResetAsync/EnergyResetAsync.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/EnergyResetAsync/EnergyResetAsync.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build SetAddress
         run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/SetAddress/SetAddress.ino"
@@ -93,16 +93,16 @@ jobs:
         run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/Search/Search.ino"
 
       - name: Build PerfTest1
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/PerfTest1/PerfTest1.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/PerfTest1/PerfTest1.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build PerfTest2
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/PerfTest2/PerfTest2.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/PerfTest2/PerfTest2.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build Callback
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/Callback/Callback.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/Callback/Callback.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
       - name: Build CallbackAsync
-        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/CallbackAsync/CallbackAsync.ino" --build-property build.extra_flags=-DMYCILA_PZEM_JSON_SUPPORT
+        run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/CallbackAsync/CallbackAsync.ino" --build-property build.extra_flags=-DMYCILA_JSON_SUPPORT
 
   platformio:
     name: pio ${{ matrix.name }}
@@ -179,19 +179,19 @@ jobs:
       - run: platformio platform install ${{ matrix.platform }}
 
       - name: Build Read
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/Read/Read.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/Read/Read.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build ReadAsync
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/ReadAsync/ReadAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/ReadAsync/ReadAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build ReadAsyncMulti
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/ReadAsyncMulti/ReadAsyncMulti.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/ReadAsyncMulti/ReadAsyncMulti.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build EnergyReset
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/EnergyReset/EnergyReset.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/EnergyReset/EnergyReset.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build EnergyResetAsync
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/EnergyResetAsync/EnergyResetAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/EnergyResetAsync/EnergyResetAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build SetAddress
         run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra" platformio ci "examples/SetAddress/SetAddress.ino" -l '.' -b ${{ matrix.board }} ${{ matrix.opts }}
@@ -200,13 +200,13 @@ jobs:
         run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra" platformio ci "examples/Search/Search.ino" -l '.' -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build PerfTest1
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/PerfTest1/PerfTest1.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/PerfTest1/PerfTest1.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build PerfTest2
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/PerfTest2/PerfTest2.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/PerfTest2/PerfTest2.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build Callback
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/Callback/Callback.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/Callback/Callback.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
 
       - name: Build CallbackAsync
-        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_PZEM_JSON_SUPPORT" platformio ci "examples/CallbackAsync/CallbackAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
+        run: PLATFORMIO_BUILD_FLAGS="-Wall -Wextra -DMYCILA_JSON_SUPPORT" platformio ci "examples/CallbackAsync/CallbackAsync.ino" -l '.' --project-option="lib_deps=bblanchon/ArduinoJson" -b ${{ matrix.board }} ${{ matrix.opts }}
