--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,7 @@ build_flags =
   -Wall -Wextra
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-  -D MYCILA_PZEM_JSON_SUPPORT
+  -D MYCILA_JSON_SUPPORT
   -D MYCILA_PZEM_ASYNC_STACK_SIZE=4096
   -UARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
