Ensure resistance is positive

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,7 +35,7 @@ platform = espressif32
 [env:arduino-2]
 platform = espressif32@6.8.1
 
-[env:arduino-v3]
+[env:arduino-3]
 platform = espressif32
 platform_packages=
   platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
