--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,18 @@
+[platformio]
+default_envs = arduino-2, arduino-3, arduino-310rc1
+lib_dir = .
+; src_dir = examples/Read
+; src_dir = examples/ReadAsync
+; src_dir = examples/ReadAsyncMulti
+; src_dir = examples/EnergyReset
+; src_dir = examples/EnergyResetAsync
+; src_dir = examples/SetAddress
+; src_dir = examples/Search
+; src_dir = examples/PerfTest1
+src_dir = examples/PerfTest2
+; src_dir = examples/Callback
+; src_dir = examples/CallbackAsync
+
 [env]
 framework = arduino
 board = esp32dev
@@ -15,28 +30,29 @@ upload_protocol = esptool
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
 
-[platformio]
-lib_dir = .
-; src_dir = examples/Read
-; src_dir = examples/ReadAsync
-; src_dir = examples/ReadAsyncMulti
-; src_dir = examples/EnergyReset
-; src_dir = examples/EnergyResetAsync
-; src_dir = examples/SetAddress
-; src_dir = examples/Search
-; src_dir = examples/PerfTest1
-src_dir = examples/PerfTest2
-; src_dir = examples/Callback
-; src_dir = examples/CallbackAsync
-
-[env:arduino]
-platform = espressif32
-
 [env:arduino-2]
 platform = espressif32@6.8.1
 
 [env:arduino-3]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-arduino-libs-3.0.4.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+; board = esp32-s3-devkitc-1
+; board = esp32-c6-devkitc-1
+
+[env:arduino-310rc1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+; board = esp32-s3-devkitc-1
+; board = esp32-c6-devkitc-1
+
+;  CI
+
+[env:ci-arduino-2]
+platform = espressif32@6.8.1
+board = ${sysenv.PIO_BOARD}
+
+[env:ci-arduino-3]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+board = ${sysenv.PIO_BOARD}
+
+[env:ci-arduino-310rc1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+board = ${sysenv.PIO_BOARD}
