--- a/platformio.ini
+++ b/platformio.ini
@@ -2,33 +2,45 @@
 default_envs = arduino-2, arduino-3, arduino-310
 lib_dir = .
 ; src_dir = examples/Read
-; src_dir = examples/ReadAsync
-; src_dir = examples/ReadAsyncMulti
-; src_dir = examples/EnergyReset
-; src_dir = examples/EnergyResetAsync
-; src_dir = examples/SetAddress
 ; src_dir = examples/Search
-; src_dir = examples/PerfTest1
-src_dir = examples/PerfTest2
 ; src_dir = examples/Callback
+src_dir = examples/SetAddress
+; src_dir = examples/EnergyReset
+
+; src_dir = examples/ReadAsync
+; src_dir = examples/ReadMultiAsync
 ; src_dir = examples/CallbackAsync
+
+; src_dir = examples/PerfTest1
+; src_dir = examples/PerfTest2
 
 [env]
 framework = arduino
 board = esp32dev
 ; board = esp32s3box
+
 build_flags = 
+  -std=c++17
+  -std=gnu++17
   -Wall -Wextra
+  -D MYCILA_JSON_SUPPORT
+  -UARDUINO_USB_CDC_ON_BOOT
+  -D MYCILA_PZEM_DEBUG
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-  -D MYCILA_JSON_SUPPORT
-  -D MYCILA_PZEM_ASYNC_STACK_SIZE=4096
-  -UARDUINO_USB_CDC_ON_BOOT
+build_unflags =
+    -std=gnu++11
+
 lib_deps = 
   bblanchon/ArduinoJson @ 7.2.0
+
 upload_protocol = esptool
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
+
+board_build.partitions = partitions-4MB-dec.csv
+board_build.app_partition_name = app
+board_upload.offset_address = 0xB0000
 
 [env:arduino-2]
 platform = espressif32@6.9.0
