ESP-IDF 5.4 compatibility: Review locking and data access

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,12 +4,12 @@ lib_dir = .
 ; src_dir = examples/Read
 ; src_dir = examples/Search
 ; src_dir = examples/Callback
-src_dir = examples/SetAddress
+; src_dir = examples/SetAddress
 ; src_dir = examples/EnergyReset
 
 ; src_dir = examples/ReadAsync
 ; src_dir = examples/ReadMultiAsync
-; src_dir = examples/CallbackAsync
+src_dir = examples/CallbackAsync
 
 ; src_dir = examples/PerfTest1
 ; src_dir = examples/PerfTest2
