--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=MycilaPZEM004Tv3
-version=7.0.2
+name=MycilaPZEM
+version=8.0.0
 author=Mathieu Carbou <mathieu.carbou@gmail.com>
 maintainer=Mathieu Carbou <mathieu.carbou@gmail.com>
-sentence=Arduino / ESP32 library for the PZEM-004T v3 Power and Energy monitor
+sentence=Arduino / ESP32 library for the PZEM-004T v3 and v4 Power and Energy monitor
 paragraph=
 category=Other
-url=https://github.com/mathieucarbou/MycilaPZEM004Tv3
+url=https://github.com/mathieucarbou/MycilaPZEM
 architectures=esp32
 license=MIT
